--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Alphabetical Article Sorter</title>
+  <style>
+    body {
+      background: url('C:\Users\ASUS\OneDrive\Desktop\nature.jpeg') no-repeat center center fixed;
+      background-size: cover;
+      font-family: sans-serif;
+    }
+    #band {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 20px;
+      width: 300px;
+      margin: auto;
+      margin-top: 50px;
+      list-style: square inside;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+
+<ul id="band"></ul>
+
+<script>
+  const bands = [
+    'The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean',
+    'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans',
+    'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'
+  ];
+
+  function stripArticle(name) {
+    return name.replace(/^(a |an |the )/i, '').trim();
+  }
+
+  const sortedBands = bands.sort((a, b) => {
+    return stripArticle(a).localeCompare(stripArticle(b));
+  });
+
+  const ul = document.getElementById('band');
+  ul.innerHTML = sortedBands.map(band => <li>${band}</li>).join('');
 </script>
 
 </body>
-
 </html>
