--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <title>Alphabetical Article Sorter</title>
   <style>
     body {
-      background: url('C:\Users\ASUS\OneDrive\Desktop\nature.jpeg') no-repeat center center fixed;
+      background: url(https://user-images.githubusercontent.com/78348500/218320592-e82de1d4-dca2-4a76-901a-7ca5c5b3fc95.png) no-repeat center center fixed;
       background-size: cover;
       font-family: sans-serif;
     }
