--- a/main.html
+++ b/main.html
@@ -3,21 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Alphabetical Article Sorter</title>
-  <style>
-    body {
-      background: url('https://www.bing.com/images/search?q=nature+images+hd&id=CF2F957EE1FCB4E3266BAD63ECBC2A44414F8C3D&FORM=IACFIR') no-repeat center center fixed;
-      background-size: cover;
-      font-family: sans-serif;
-    }
-    #band {
-      background-color: rgba(255, 255, 255, 0.9);
-      padding: 20px;
-      width: 300px;
-      margin: auto;
-      margin-top: 50px;
-      list-style: square inside;
-    }
-  </style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
