--- a/main.html
+++ b/main.html
@@ -10,11 +10,9 @@
 <ul id="band"></ul>
 
 <script>
-  const bands = [
-    'The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean',
-    'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans',
-    'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'
-  ];
+  
+const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
+
 
   function stripArticle(name) {
     return name.replace(/^(a |an |the )/i, '').trim();
