--- a/main.html
+++ b/main.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Alphabetical Article Sorter</title>
-<link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sorted Band List</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 600px;
+      margin: 20px auto;
+      padding: 0 20px;
+    }
+    #band {
+      list-style-type: none;
+      padding: 0;
+    }
+    #band li {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+  </style>
 </head>
 <body>
+  <h1>Band List</h1>
+  <ul id="band"></ul>
 
-<ul id="band"></ul>
+  <script>
+    const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
 
-<script>
-  
-const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
+    // Function to get sort key by removing 'a', 'an', 'the' from start
+    function getSortKey(band) {
+      return band.replace(/^(a|an|the)\s+/i, '').trim();
+    }
 
+    // Sort bands array
+    bands.sort((a, b) => getSortKey(a).localeCompare(getSortKey(b)));
 
-  function stripArticle(name) {
-    return name.replace(/^(a |an |the )/i, '').trim();
-  }
-
-  const sortedBands = bands.sort((a, b) => {
-    return stripArticle(a).localeCompare(stripArticle(b));
-  });
-
-  const ul = document.getElementById('band');
-  ul.innerHTML = sortedBands.map(band => <li>${band}</li>).join('');
-</script>
-
+    // Populate the unordered list
+    const bandList = document.getElementById('band');
+    bands.forEach(band => {
+      const li = document.createElement('li');
+      li.textContent = band;
+      bandList.appendChild(li);
+    });
+  </script>
 </body>
 </html>
