--- a/main.html
+++ b/main.html
@@ -7,22 +7,32 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 600px;
-      margin: 20px auto;
-      padding: 0 20px;
+      margin: 0;
+      padding: 20px;
+      background-image: url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80'); /* Example background */
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
     #band {
-      list-style-type: none;
-      padding: 0;
+      list-style-type: disc; /* Bullets as shown in the image */
+      padding: 20px;
+      background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+      border-radius: 10px;
+      max-width: 400px;
+      margin: 0;
     }
     #band li {
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
+      padding: 5px 0;
+      font-size: 16px;
+      color: #333;
     }
   </style>
 </head>
 <body>
-  <h1>Band List</h1>
   <ul id="band"></ul>
 
   <script>
