--- a/main.html
+++ b/main.html
@@ -1,144 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
-<title>Alphabetical Article Sorter</title>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-  /* Reset and base */
-  * {
-    box-sizing: border-box;
-  }
-  body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #667eea, #764ba2);
-    color: #f1f1f1;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    min-height: 100vh;
-    padding: 20px 15px 40px;
-  }
-
-  main {
-    background: rgba(0,0,0,0.35);
-    border-radius: 12px;
-    padding: 25px 30px 30px 30px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.4);
-    max-width: 350px;
-    width: 100%;
-  }
-
-  h1 {
-    font-weight: 600;
-    font-size: 1.8rem;
-    margin-bottom: 20px;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 1.6px;
-    text-shadow: 2px 2px 6px rgba(0,0,0,0.6);
-  }
-
-  ul#band {
-    list-style: disc;
-    padding-left: 20px;
-    margin: 0;
-    max-height: 450px;
-    overflow-y: auto;
-  }
-
-  ul#band li {
-    background: rgba(255,255,255,0.1);
-    margin-bottom: 12px;
-    padding: 12px 16px;
-    border-radius: 8px;
-    font-size: 1.1rem;
-    color: #e0e0e0;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.2);
-    transition: background-color 0.3s ease, color 0.3s ease;
-    cursor: default;
-  }
-
-  ul#band li:hover {
-    background: rgba(255,255,255,0.25);
-    color: #fff;
-  }
-
-  /* Scrollbar styling */
-  ul#band::-webkit-scrollbar {
-    width: 7px;
-  }
-  ul#band::-webkit-scrollbar-track {
-    background: transparent;
-  }
-  ul#band::-webkit-scrollbar-thumb {
-    background-color: rgba(255,255,255,0.3);
-    border-radius: 10px;
-  }
-
-  /* Mobile friendly tweaks */
-  @media (max-width: 400px) {
-    body {
-      padding: 20px 10px 30px;
-    }
-    main {
-      padding: 20px 20px 25px;
-    }
-    ul#band li {
-      font-size: 1rem;
-      padding: 10px 14px;
-    }
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sorted Articles</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-image: url('https://www.w3schools.com/w3images/mountains.jpg'); /* Example nature image URL */
+            background-size: cover; /* Make sure the image covers the entire page */
+            background-position: center; /* Center the image */
+            color: white; /* Adjust text color for better visibility */
+        }
+        ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+    </style>
 </head>
 <body>
-<main>
-  <h1>Alphabetical Article Sorter</h1>
-  <ul id="band"></ul>
-</main>
+    <ul id="band"></ul>
 
-<script>
-  const bands = [
-    'The Plot in You',
-    'The Devil Wears Prada',
-    'Pierce the Veil',
-    'Norma Jean',
-    'The Bled',
-    'Say Anything',
-    'The Midway State',
-    'We Came as Romans',
-    'Counterparts',
-    'Oh, Sleeper',
-    'A Skylit Drive',
-    'Anywhere But Here',
-    'An Old Dog'
-  ];
+    <script>
+        const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 
+                      'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 
+                      'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
 
-  // Helper function: remove leading articles
-  function stripArticle(name) {
-    return name.replace(/^(a |an |the )/i, '').trim();
-  }
+        // Function to remove 'a', 'an', 'the' for sorting purposes
+        function getSortKey(band) {
+            return band.replace(/^(a|an|the)\s+/i, '');
+        }
 
-  // Sort ignoring articles
-  bands.sort((a, b) => {
-    const nameA = stripArticle(a).toLowerCase();
-    const nameB = stripArticle(b).toLowerCase();
-    if (nameA < nameB) return -1;
-    if (nameA > nameB) return 1;
-    return 0;
-  });
+        // Sort bands array ignoring 'a', 'an', 'the'
+        bands.sort((a, b) => getSortKey(a).localeCompare(getSortKey(b)));
 
-  const ul = document.getElementById('band');
+        // Get the ul element
+        const bandList = document.getElementById('band');
 
-  // Populate list with bullets
-  bands.forEach(band => {
-    const li = document.createElement('li');
-    li.textContent = band;
-    ul.appendChild(li);
-  });
-</script>
+        // Add each band as a list item
+        bands.forEach(band => {
+            const li = document.createElement('li');
+            li.textContent = band;
+            bandList.appendChild(li);
+        });
+    </script>
 </body>
 </html>
