--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-image: url('https://www.w3schools.com/w3images/mountains.jpg'); /* Example nature image URL */
+            background-image: url('"C:\Users\HI\Desktop\218320592-e82de1d4-dca2-4a76-901a-7ca5c5b3fc95.png"'); /* Example nature image URL */
             background-size: cover; /* Make sure the image covers the entire page */
             background-position: center; /* Center the image */
             color: white; /* Adjust text color for better visibility */
