--- a/main.html
+++ b/main.html
@@ -3,43 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sorted Articles</title>
+    <title>Alphabetical Article Sorter</title>
     <style>
         body {
+            margin: 0;
+            padding: 0;
             font-family: Arial, sans-serif;
-            margin: 20px;
-            background-image: url('"C:\Users\HI\Desktop\218320592-e82de1d4-dca2-4a76-901a-7ca5c5b3fc95.png"'); /* Example nature image URL */
-            background-size: cover; /* Make sure the image covers the entire page */
-            background-position: center; /* Center the image */
-            color: white; /* Adjust text color for better visibility */
+            background: url('https://images.unsplash.com/photo-1506744038136-46273834b3fb') no-repeat center center fixed;
+            background-size: cover;
         }
+
+        .container {
+            background-color: rgba(255, 255, 255, 0.95);
+            max-width: 500px;
+            margin: 50px auto;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
         ul {
-            list-style-type: disc;
+            list-style-type: square;
             padding-left: 20px;
+        }
+
+        li {
+            padding: 10px 0;
+            border-bottom: 1px solid #ddd;
+        }
+
+        li:last-child {
+            border-bottom: none;
         }
     </style>
 </head>
 <body>
-    <ul id="band"></ul>
+    <div class="container">
+        <h1>Band List</h1>
+        <ul id="bands">
+            <!-- Bands will be populated here -->
+        </ul>
+    </div>
 
     <script>
-        const bands = ['The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil', 'Norma Jean', 
-                      'The Bled', 'Say Anything', 'The Midway State', 'We Came as Romans', 
-                      'Counterparts', 'Oh, Sleeper', 'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'];
+        const bands = [
+            'The Plot in You', 'The Devil Wears Prada', 'Pierce the Veil',
+            'Norma Jean', 'The Bled', 'Say Anything', 'The Midway State',
+            'We Came as Romans', 'Counterparts', 'Oh, Sleeper',
+            'A Skylit Drive', 'Anywhere But Here', 'An Old Dog'
+        ];
 
-        // Function to remove 'a', 'an', 'the' for sorting purposes
-        function getSortKey(band) {
-            return band.replace(/^(a|an|the)\s+/i, '');
+        function cleanBandName(name) {
+            return name.replace(/^(a |an |the )/i, '').trim();
         }
 
-        // Sort bands array ignoring 'a', 'an', 'the'
-        bands.sort((a, b) => getSortKey(a).localeCompare(getSortKey(b)));
+        const sortedBands = bands.sort((a, b) => {
+            return cleanBandName(a).localeCompare(cleanBandName(b));
+        });
 
-        // Get the ul element
-        const bandList = document.getElementById('band');
-
-        // Add each band as a list item
-        bands.forEach(band => {
+        const bandList = document.getElementById('bands');
+        sortedBands.forEach(band => {
             const li = document.createElement('li');
             li.textContent = band;
             bandList.appendChild(li);
